feat: implemented get seeds by hackathon ID. Improved Carousel and added it to JoinSuccess component
#27
